# AugmentedVisionBonus2

./: .gitignore  CMakeLists.txt  README.md
assets/: plugins.cfg  resources.cfg
cmake/: README.md
docs/: ARCHITECTURE.md
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h
src/render/: ModelLoader.cpp  ModelLoader.h  OgreContext.cpp  OgreContext.h  SceneRenderer.cpp  SceneRenderer.h
src/storage/: Assets.h  DataStore.cpp  DataStore.h  Transform.cpp  Transform.h  Types.h
src/ui/: CameraWindow.cpp  CameraWindow.h  ConfigureWindow.cpp  ConfigureWindow.h  UploadWindow.cpp  UploadWindow.h  Window.cpp  Window.h
src/vision/: CameraCapture.cpp  CameraCapture.h  ImageTracker.cpp  ImageTracker.h
tests/: CMakeLists.txt  DataStoreTests.cpp  ImageTrackerTests.cpp  TestMain.h  TestRunner.cpp  TransformTests.cpp
